<resources>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_menu_alt_shortcut_label">Alt+</string>
<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
<string name="abc_menu_delete_shortcut_label">delete</string>
<string name="abc_menu_enter_shortcut_label">enter</string>
<string name="abc_menu_function_shortcut_label">Function+</string>
<string name="abc_menu_meta_shortcut_label">Meta+</string>
<string name="abc_menu_shift_shortcut_label">Shift+</string>
<string name="abc_menu_space_shortcut_label">space</string>
<string name="abc_menu_sym_shortcut_label">Sym+</string>
<string name="abc_prepend_shortcut_label">Menu+</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="achievement">Achievement</string>
<string name="achievement_as_work">You spend in the game 40 hours for 5 days</string>
<string name="achievement_guest">You spend in the game 1 hour!</string>
<string name="achievement_middle">You spend in the game 24 hours!</string>
<string name="achievement_new_year">Happy new year!</string>
<string name="achievement_newbie">You spend in the game 3 hours!</string>
<string name="achievement_night">Night life!</string>
<string name="achievement_pro">You spend in the game 100 hours!</string>
<string name="action_settings">Settings</string>
<string name="analytics_CH_project_dev_id">309</string>
<string name="analytics_CH_project_id">309</string>
<string name="androidx_startup">androidx.startup</string>
<string name="api_method_cant_be_empty">"Api method can't be empty or null"</string>
<string name="app_config_name">avatariam</string>
<string name="app_id">171455904607</string>
<string name="app_name">Avatar Life</string>
<string name="app_skin_name">avataria</string>
<string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
<string name="applovin_list_item_image_description">Displays more info about the list item.</string>
<string name="appsflyer_gcmproject">AAAAJ-uRe18:APA91bGJk6ejkT9zMEGE_5JkoKvY1_WJu0BXyvXfWwfG_BuZaXbnz_EVnMdVFG3DI9jlSPLXnUnZ6gtWNbZ_eTGZBoQZrxpLMBZDMsliX0exc-seq5wkEmwYMURIAMbtX1fUWVfijGPP</string>
<string name="articles_list_fragment_error_message">Failed to get articles</string>
<string name="articles_list_fragment_no_articles_found">No articles found</string>
<string name="ask_request_list_failed_request_message">Message failed</string>
<string name="attention">Attention!</string>
<string name="authorization_canceled">Authorization was canceled</string>
<string name="belvedere_dialog_camera">Camera</string>
<string name="belvedere_dialog_gallery">Gallery</string>
<string name="belvedere_fam_desc_collapse_fam">Collapse Floating Action Menu</string>
<string name="belvedere_fam_desc_expand_fam">Expand Floating Action Menu</string>
<string name="belvedere_fam_desc_open_gallery">Import file from gallery</string>
<string name="belvedere_fam_desc_open_google_photos">Import image from Google Photos</string>
<string name="belvedere_image_stream_file_too_large">File too large</string>
<string name="belvedere_image_stream_title">Photo library</string>
<string name="belvedere_image_stream_unknown_app">@string/request_attachment_generic_unknown_app</string>
<string name="belvedere_permissions_denied">Permissions denied</string>
<string name="belvedere_sdk_fpa_suffix_v2">.belvedere2.attachments</string>
<string name="belvedere_stream_item_camera_tile_desc">Import image from camera</string>
<string name="belvedere_stream_item_select_file_desc">Select file %s</string>
<string name="belvedere_stream_item_select_image_desc">Select image %s</string>
<string name="belvedere_stream_item_unselect_file_desc">Unselect file %s</string>
<string name="belvedere_stream_item_unselect_image_desc">Unselect image %s</string>
<string name="belvedere_toolbar_desc_collapse">Close image picker</string>
<string name="billing_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgj0KePer+W4ra2/nec4LtEK8GTdW5NYcGy9GlpgPkB8wIUnwyvKTF5Pm94wxonEJJ1HPrdehNKDCrOl2TWg+lacnbL6CQo5BqRLWHm00WwM6YADwZyppqbq60OV3odePwteoFGzy5RtHyGLay6XHHt4JEfPu5DOPPVKBCKFa1+IzZlbIdLX/KCeYZRWVkWjZ2KDpj5A5r8f5AOWAdHWuR6lt14FTUk6nh3xXn0HpNFcWFFx/8CtDfw6JDXBGgYQ9jane9YA3VofotK5gGjcL//o7zSGIjFRaDN7F9W8lQEdHdOy3SFGTBdXPQvcyPUDnRFFYLQhh4xFmO5ALLbXddwIDAQAB</string>
<string name="bind_101xp">Sync progress</string>
<string name="bind_sn">Sync progress</string>
<string name="bind_text_warning">All the characters previously created on this device while using a guest account will be synced to a 101XP.com or a social network account.</string>
<string name="cancel">Cancel</string>
<string name="change">Change</string>
<string name="collect_logs">Collect logs</string>
<string name="eula_accept_text">Accept</string>
<string name="eula_btn_text">EULA</string>
<string name="eula_message_text">"By tapping the “Accept” button you
 confirm that you have read and agree to
 our User Agreement and Privacy Policy."</string>
<string name="eula_read_text">Read</string>
<string name="eula_title">User Agreement and Privacy Policy</string>
<string name="exit_logout">Logout</string>
<string name="feedback_hint">Your feedback</string>
<string name="id">101XP ID:</string>
<string name="join_button">Join to group</string>
<string name="join_vk">Join to group Vkontakte</string>
<string name="later">Remind later</string>
<string name="log_in_with">To sync your progress sign in with a 101XP.com or a social network account</string>
<string name="logout">Logout</string>
<string name="not_now_button">Not now</string>
<string name="p101xp_label_text">Game ID:</string>
<string name="player_profile">Player Profile</string>
<string name="report">Technical support</string>
<string name="send_button">Send</string>
<string name="username">Welcome,</string>
<string name="whats_wrong_please">Please tell us what exactly does not please you in game %1$s?</string>
</resources>