<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/dialog_corner_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/p101xp_eula_dialog_min_width">
	<TextView android:textSize="@dimen/p101xp_eula_title" android:textStyle="bold" android:textColor="@color/p101xp_eula_agree_label" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/p101xp_eula_licence_margin" android:layout_marginBottom="@dimen/p101xp_eula_licence_margin" android:text="@string/eula_title" />
	<TextView android:textColor="@android:color/black" android:gravity="center_horizontal" android:id="@id/eula_license_text" android:layout_width="@dimen/p101xp_eula_dialog_min_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/p101xp_eula_licence_margin" android:layout_marginRight="@dimen/p101xp_eula_licence_margin" android:text="@string/eula_message_text" />
	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/p101xp_eula_licence_margin">
		<Button android:enabled="true" android:textColor="@color/p101xp_eula_agree_label" android:id="@id/eula_read_btn" android:background="@drawable/selector_eula_button" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginLeft="16.0dip" android:layout_marginBottom="10.0dip" android:text="@string/eula_read_text" android:layout_alignParentLeft="true" />
		<Button android:enabled="true" android:textStyle="bold" android:textColor="@color/p101xp_eula_agree_label" android:id="@id/eula_accept_btn" android:background="@drawable/selector_eula_button" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="10.0dip" android:text="@string/eula_accept_text" android:layout_alignParentRight="true" />
	</RelativeLayout>
</LinearLayout>
