<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/dialog_corner_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="@dimen/authorize_dialog_fixed_width">
	<TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ff665d76" android:layout_gravity="center_horizontal" android:id="@id/attention_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/attention" />
	<TextView android:textColor="#ff9a93ac" android:ellipsize="none" android:gravity="center_horizontal" android:id="@id/attention_text" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="8.0dip" android:text="@string/bind_text_warning" android:width="@dimen/authorize_dialog_fixed_width" android:scrollHorizontally="false" android:singleLine="false" android:layout_weight="1.0" />
	<LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/first_divisor" android:background="#ffdfe5e8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
	<Button android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/bind_button_101xp" android:background="@drawable/selector_portal_button" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/bind_101xp" android:drawablePadding="2.0dip" android:textAlignment="center" style="@style/CaptionOnly" />
	<LinearLayout android:layout_gravity="center_vertical" android:background="#ffdfe5e8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="15.0dip" />
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
		<Button android:textSize="13.0sp" android:textColor="#ff947cd6" android:id="@id/button_exit" android:background="@null" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/exit_logout" android:layout_weight="1.0" android:textAlignment="center" />
		<Button android:textSize="13.0sp" android:textColor="#ff947cd6" android:id="@id/button_cancel" android:background="@null" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/cancel" android:layout_weight="1.0" android:textAlignment="center" />
	</LinearLayout>
</LinearLayout>
