<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff63686b" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/textView3" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:text="@string/join_vk" />
	<Button android:textSize="13.0sp" android:textColor="#ffffffff" android:id="@id/button_join_vk" android:background="@drawable/selector_join_vk_button" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/join_button" android:drawablePadding="15.0dip" />
	<View android:layout_gravity="center_vertical" android:background="#ffdfe5e8" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="15.0dip" android:layout_weight="1.0" />
	<Button android:textSize="13.0sp" android:textColor="#ff947cd6" android:id="@id/button_later" android:background="@null" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/later" />
</LinearLayout>
