<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:layout_width="335.0dip" android:layout_height="240.0dip" card_view:cardCornerRadius="6.0dip">
		<ImageView android:id="@id/rating_feedback_main_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/dialog_default_rating_bg" android:scaleType="fitXY" android:adjustViewBounds="true" android:minWidth="424.0dip" android:minHeight="240.0dip" />
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
			<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
				<RatingBar android:layout_gravity="start|center" android:id="@id/rating_feedback_bar" android:paddingLeft="4.0dip" android:paddingRight="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-52.0dip" android:layout_marginRight="-52.0dip" android:progressDrawable="@drawable/ratingbar_star_default" android:numStars="5" android:isIndicator="true" android:scaleX="0.5" android:scaleY="0.5" android:paddingStart="4.0dip" android:paddingEnd="0.0dip" />
				<Button android:textColor="#ff1ba203" android:layout_gravity="center_vertical" android:id="@id/rating_feedback_change_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change" android:textAllCaps="false" />
			</LinearLayout>
			<TextView android:textColor="@color/p101xp_rating_text" android:layout_gravity="center_horizontal" android:id="@id/rating_feedback_ask_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/whats_wrong_please" />
			<EditText android:gravity="start" android:layout_gravity="center_horizontal" android:id="@id/rating_feedback_input" android:background="@drawable/rating_feedback_input_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="2.0dip" android:minWidth="@dimen/p101xp_feedback_input_min_width" android:hint="@string/feedback_hint" android:lines="3" android:inputType="textMultiLine" />
			<LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip">
				<Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/rating_feedback_not_now_button" android:background="@drawable/not_now_button_bg" android:layout_width="0.0dip" android:layout_height="44.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/not_now_button" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Small" />
				<Button android:enabled="false" android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/rating_feedback_send_button" android:background="@drawable/feedback_send_selector" android:layout_width="0.0dip" android:layout_height="44.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/send_button" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Small" />
			</LinearLayout>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
</FrameLayout>
